--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -70,7 +70,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Easy to take classes from any device 
+                                        Easy to take classes 
                                     </h4>
                                 </div>
                             </div>
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Two years of access for each class
+                                        Two years of access 24/7 on all devices
                                     </h4>
                                 </div>
                             </div>
