--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -16,7 +16,7 @@
         <meta name="robots" content="all">
 
         <title>
-            {% block title %}Online OSHA-Trainers IACET/PDH Construction Safety Training  | pdhsafety.com
+            {% block title %}Online Safety Training & Certification  | pdhsafety.com
             {% endblock %}
         </title>
 
