--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -49,7 +49,8 @@ Easy ToTake CSP Exam Prep Course Money Back Guarantee
 
         <div class="sp-badge-panel">
             <a href="#bundles" class="sp-badge ">
-                <span>Buy All Courses at low price</span>
+                <span>Buy All CSP Exam Preparation Courses at One Low Price
+</span>
             </a>
         </div>
     
