--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -215,7 +215,8 @@ Easy ToTake CSP Exam Prep Course Money Back Guarantee
         <div class="row align-items-center" id="bundles">
             <div class="col-lg-12">
                 <div class="section-heading">
-                    <h3>Buy Packages/Bundles for these courses</h3>
+                    <h3>Buy The CSP Prep Course Package/ Complete Bundle CSP Prep Courses Online
+ </h3>
                 </div>
             </div>
         </div>
