--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -28,8 +28,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-12 col-md-12">
                     <div class="section-heading center-heading">
-                        <span class="subheading">LEARN NEW SAFETY SKILLS TO GO AHEAD FOR YOUR CAREER</span>
-                        <h3>Online Safety Training & Certification</h3>
+                        <span class="Access content created by over hundreds of safety professionals nationwide </span>
+                        <h3>Getting Certified Has Never Been Easier</h3>
                     </div>
                 </div>
             </div>
