--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -248,7 +248,7 @@
                     <div class="col-lg-6">
                         <div class="section-heading white-text">
                             <span class="subheading">Newsletter</span>
-                            <h3>Join our community of students</h3>
+                            <h3>Join A Community of <br> Certified Safety Professional</h3>
                         </div>
                     </div>
                     <div class="col-lg-6">
