--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -138,12 +138,12 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container justify-content-center">
                         <a class="navbar-brand" href="/">
-                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Construction Safety Training" class="img-fluid">
+                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Make Safety Training & Certification Happen" class="img-fluid">
                         
 
                         </a>
 
-                     <h3> Construction Safety Training</h3>
+                     <h3> Make Safety Training & Certification Happen </h3>
 
                         <!-- Toggler -->
 
