--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -8,7 +8,7 @@
     Course | pdhsafety.com
 {% endblock %}
 
-{% block meta_desc %} Best Prices Online 
+{% block meta_desc %} Best Price Online 
     {{ object.subject }}
    IACET Accredited, Access 24/7 On All Devices.
 Easy ToTake Money Back Guarante
