--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -11,7 +11,7 @@ Courses Online | pdhsafety.com
 {% endblock %}
 
 {% block meta_desc %}
-{% if subject %}Low Cost Online 
+{% if subject %)Best Price Online 
 {{ subject.title }}
 IACET Accredited, Access 24/7 On All Devices.
 Easy ToTake CSP Exam Prep Course Money Back Guarantee 
