--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="{% block meta_desc %} 100% Online Low Cost Live Access to Safety Professionals IACET Accredited, Access 24/7 On All Devices.
+        <meta name="description" content="{% block meta_desc %} 100% Online Best Prices Live Access to Safety Professionals IACET Accredited, Access 24/7 On All Devices.
 
   {% endblock %}">
         <meta name="author" content="{% block meta_author %}{% endblock %}">
