--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -138,7 +138,7 @@
                 <nav class="navbar navbar-expand-lg">
                     <div class="container justify-content-center">
                         <a class="navbar-brand" href="/">
-                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Make Safety Training & Certification Happen" class="img-fluid">
+                            <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Make Safety Training Happen" class="img-fluid">
                         
 
                         </a>
