--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -9,7 +9,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-8">
                     <div class="banner-content center-heading">
-                        <h1>Online Safety Training & Certification</h1>
+                        <h1>Accredit Safety Training </h1>
                         <a href="{% url 'courses_list' %}" class="btn btn-main">
                             <i class="fa fa-list-ul mr-2"></i>our Courses
                         </a>
