--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -143,7 +143,7 @@
 
                         </a>
 
-                     <h3> Make Safety Training & Certification Happen </h3>
+                     <h3> Make Safety Training Happen </h3>
 
                         <!-- Toggler -->
 
