--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -16,7 +16,7 @@
         <meta name="robots" content="all">
 
         <title>
-            {% block title %}Online Safety Training & Certification  | pdhsafety.com
+            {% block title %} Accredit Safety Training   | pdhsafety.com
             {% endblock %}
         </title>
 
@@ -248,7 +248,7 @@
                     <div class="col-lg-6">
                         <div class="section-heading white-text">
                             <span class="subheading">Newsletter</span>
-                            <h3>Join A Community of <br> Certified Safety Professional</h3>
+                            <h3> Join Our Safety Community </h3>
                         </div>
                     </div>
                     <div class="col-lg-6">
