--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -84,7 +84,8 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Two years of access 24/7 on all devices
+                                        1yr access 24/7 on all devices
+
                                     </h4>
                                 </div>
                             </div>
