--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -29,7 +29,7 @@
                 <div class="col-lg-12 col-md-12">
                     <div class="section-heading center-heading">
                         <span> Access content created by over hundreds of safety professionals nationwide </span>
-                        <h3>Getting Safety Certified Has Never Been Easier</h3>
+                        <h3>Training Has Never Been Easier</h3>
                     </div>
                 </div>
             </div>
