--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -14,7 +14,7 @@ Courses Online | pdhsafety.com
 {% if subject %)Best Price Online 
 {{ subject.title }}
 IACET Accredited, Access 24/7 On All Devices.
-Easy ToTake CSP Exam Prep Course Money Back Guarantee 
+Easy To Take CSP Exam Prep Course Money Back Guarantee 
 
 {% endif %}
 {% endblock %}
@@ -215,8 +215,7 @@ Easy ToTake CSP Exam Prep Course Money Back Guarantee
         <div class="row align-items-center" id="bundles">
             <div class="col-lg-12">
                 <div class="section-heading">
-                    <h3>Buy The CSP Prep Course Package/ Complete Bundle CSP Prep Courses Online
- </h3>
+                    <h3>There's never been a better time to take your career to the next level  </h3>
                 </div>
             </div>
         </div>
@@ -250,7 +249,7 @@ Easy ToTake CSP Exam Prep Course Money Back Guarantee
             
                     </div>
                     <div class="card-footer text-center">
-                        <a href="/package-buy/{{ item.id }}/" class="btn btn-success">Buy Now</a>
+                        <a href="/package-buy/{{ item.id }}/" class="btn btn-success">Purchase Now /a>
                     </div>
                 </div>
             </div>
