--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -3,16 +3,11 @@
 {% load course_tags %}
 
 {% block title %}
-{% if subject %}
-Best
-{{ subject.title }}
-Courses Online | pdhsafety.com
-{% endif %}
+{% if subject %} Best {{ subject.title } Courses Online | pdhsafety.com {% endif %}
 {% endblock %}
 
 {% block meta_desc %}
-{% if subject %)Best Price Online 
-{{ subject.title }}
+{% if subject %} Best Price Online {{ subject.title }}
 IACET Accredited, Access 24/7 On All Devices.
 Easy To Take CSP Exam Prep Course Money Back Guarantee 
 
