--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -70,7 +70,8 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        Easy to take classes 
+                                        Great value for money
+ 
                                     </h4>
                                 </div>
                             </div>
