--- a/courses/templates/index.html
+++ b/courses/templates/index.html
@@ -57,7 +57,7 @@
                                 </div>
                                 <div class="feature-text">
                                     <h4>
-                                        IACET CEUs Credit
+                                        IACET CEUs credit
                                     </h4>
                                 </div>
                             </div>
