fixed the certificate company name

--- a/app_students/templates/certificate/certificate_template.html
+++ b/app_students/templates/certificate/certificate_template.html
@@ -268,8 +268,7 @@
                         <p class="MsoNormal" align="center" style='margin-right:.75pt;text-align:center;
                                   background:white'>
                             <b>
-                                <span style='font-size:24.0pt;font-family:"Americana BT","serif"'>New
-                                    								York City Construction Safety Training LLC</span>
+                                <span style='font-size:24.0pt;font-family:"Americana BT","serif"'>NYC Construction Safety Training LLC</span>
                             </b>
                         </p>
                         <p class="Heading">
