add course progress teacher view

--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -67,6 +67,12 @@
                             <ul class="navbar-nav mx-auto">
 
                                 <li class="nav-item">
+                                    <a class="nav-link" href="/">
+                                        Home
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
                                     <a class="nav-link" href="{% url 'teacher_dashboard' %}">
                                         Dashboard
                                     </a>
@@ -77,6 +83,12 @@
                                         Courses
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'teacher_students' %}">
+                                        Students
+                                    </a>
+                                </li> 
+
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'quiz_manager' %}">
                                         Quizzes
