--- a/app_teachers/templates/teacher_home.html
+++ b/app_teachers/templates/teacher_home.html
@@ -43,7 +43,7 @@
                                             <i class="fa fa-users"></i>
                                         </div>
                                         <div class="feature-text">
-                                            <h4>Students -
+                                            <h4>Enrolled -
                                                 {{ students_count }}
                                             </h4>
                                             <p>
