--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -96,7 +96,7 @@
                                                 <a href="#">Welcome,
                                                     {{ request.user.first_name }}</a>
                                             {% else %}
-                                                <a href="{% url 'student_registration' %}">Register</a>
+                                                <a href="{% url 'student_registration' %}" aria-label="Register">Register</a>
                                             {% endif %}
                                         </li>
                                     </ul>
@@ -105,22 +105,22 @@
 
                                     {% if request.user.is_authenticated %}
                                         {% if request.user.is_teacher == True %}
-                                            <a href="{% url 'teacher_dashboard' %}" class="btn btn-main btn-small">Teacher
+                                            <a href="{% url 'teacher_dashboard' %}" class="btn btn-main btn-small" aria-label="Teacher Dashboard">Teacher
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Dashboard</a>
                                         {% endif %}
                                         {% if request.user.is_student == True %}
-                                            <a href="{% url 'student_dashboard' %}" class="btn btn-main btn-small">Student
+                                            <a href="{% url 'student_dashboard' %}" class="btn btn-main btn-small" aria-label="Student Dashboard">Student
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Dashboard</a>
                                         {% endif %}
                                         {% if request.user.is_superuser == True %}
-                                            <a href="{% url 'admin_dashboard' %}" class="btn btn-main btn-small">Admin
+                                            <a href="{% url 'admin_dashboard' %}" class="btn btn-main btn-small" aria-label="Admin Dashboard">Admin
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Dashboard</a>
                                         {% endif %}
-                                        <a href="{% url 'logout' %}" class="btn btn-main btn-small">
+                                        <a href="{% url 'logout' %}" class="btn btn-main btn-small" aria-label="Logout">
                                             <i class="fa fa-sign-out-alt "></i>
                                         </a>
                                     {% else %}
-                                        <a href="{% url 'login' %}" class="btn btn-main btn-small">
+                                        <a href="{% url 'login' %}" class="btn btn-main btn-small" aria-label="Login">
                                             <i class="fa fa-user mr-2"></i>Login
                                         </a>
                                     {% endif %}
@@ -137,10 +137,8 @@
             <div class="site-navigation main_menu ">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container justify-content-center">
-                        <a class="navbar-brand" href="/">
+                        <a class="navbar-brand" href="/" aria-label="Home">
                             <img src="{% static 'edutim/images/logo5.png' %}" width="100" alt="Make Safety Training Happen" class="img-fluid">
-                        
-
                         </a>
 
                      <h3> Make Safety Training Happen </h3>
@@ -164,7 +162,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarMenu">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/">
+                                    <a class="nav-link" href="/" aria-label="Home">
                                         Home
                                     </a>
                                 </li>
@@ -177,7 +175,7 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/packages">
+                                    <a class="nav-link" href="/packages" aria-label="Packages">
                                         Packages
                                     </a>
                                 </li>
@@ -198,13 +196,13 @@
 
                             <ul class="header-contact-right">
                                 <li>
-                                    <a href="{% url 'cart_detail' %}" class="header-cart">
+                                    <a href="{% url 'cart_detail' %}" class="header-cart" alt="My Cart" aria-label="My Cart">
                                         <i class="fa fa-shopping-cart"></i>
                                     </a>
                                     <span class="top-cart-count">0</span>
                                 </li>
                                 <li>
-                                    <a href="#" class="header-search search_toggle">
+                                    <a href="#" class="header-search search_toggle" aria-label="Search Courses">
                                         <i class="fa fa fa-search"></i>
                                     </a>
                                 </li>
@@ -248,7 +246,7 @@
                     <div class="col-lg-6">
                         <div class="section-heading white-text">
                             <span class="subheading">Newsletter</span>
-                            <h3> Join Our Safety Community </h3>
+                            <h4> Join Our Safety Community </h4>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -273,28 +271,28 @@
                             <p class="mt-3">
                                 NYC Construction Safety Training aims to offer quality training that is relevant and useful for the construction industry. These efforts include offering training courses that are useful and/or necessary to achieve success and career outcomes in the construction industry where course material may be useful and applicable, perperpetual reviews of training materials for accuracy and relevance, and development of quality staff and instructors.                                                                                                                                                                                                                         instructors..
                             </p>
-                            <ul class="list-inline footer-socials">
+                            {% comment %} <ul class="list-inline footer-socials d-none">
                                 <li class="list-inline-item">
-                                    <a href="#">
+                                    <a href="#" aria-label="Facebook">
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
-                                <li class="list-inline-item">
+                                <li class="list-inline-item" aria-label="Twitter">
                                     <a href="#">
                                         <i class="fab fa-twitter"></i>
                                     </a>
                                 </li>
-                                <li class="list-inline-item">
+                                <li class="list-inline-item" aria-label="Linkedin">
                                     <a href="#">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
-                                <li class="list-inline-item">
+                                <li class="list-inline-item" aria-label="Pinterest">
                                     <a href="#">
                                         <i class="fab fa-pinterest"></i>
                                     </a>
                                 </li>
-                            </ul>
+                            </ul> {% endcomment %}
                         </div>
                     </div>
 
@@ -384,7 +382,7 @@
         </section>
 
         <div class="fixed-btm-top">
-            <a href="#top-header" class="js-scroll-trigger scroll-to-top">
+            <a href="#top-header" class="js-scroll-trigger scroll-to-top" aria-label="Scroll Top" alt="Scroll Top">
                 <i class="fa fa-angle-up"></i>
             </a>
         </div>
