--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -83,7 +83,7 @@
                                 </li>
                                 <li>
                                     <span>Email :</span>
-                                    mail@pdhsafety.com
+                                    <a href="mailto:mail@pdhsafety.com">mail@pdhsafety.com</a>
                                 </li>
                             </ul>
                         </div>
@@ -240,27 +240,7 @@
 
         {% block content %}{% endblock %}
 
-        <section class="cta-2">
-            <div class="container">
-                <div class="row align-items-center subscribe-section ">
-                    <div class="col-lg-6">
-                        <div class="section-heading white-text">
-                            <span class="subheading">Newsletter</span>
-                            <h4> Join Our Safety Community </h4>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="subscribe-form">
-                            <form action="#">
-                                <input type="text" class="form-control" placeholder="Email Address">
-                                <a href="#" class="btn btn-main">Subscribe<i class="fa fa-angle-right ml-2"></i>
-                                </a>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+       
 
         <section class="footer pt-120">
             <div class="container">
@@ -315,13 +295,16 @@
                     </div>
                     <div class="col-lg-2 col-sm-6 col-md-6">
                         <div class="footer-widget mb-5 mb-lg-0">
-                            <h5 class="widget-title">Legal</h5>
+                            <h5 class="widget-title">Quick Links</h5>
                             <ul class="list-unstyled footer-links">
                                 <li>
-                                    <a href="/legal/">Legal</a>
+                                    <a href="/privacy-policy/">Privacy Policy</a>
                                 </li>
                                 <li>
-                                    <a href="/student-manual/">Student Manual</a>
+                                    <a href="/terms-conditions/">Terms Conditions</a>
+                                </li>
+                                <li>
+                                    <a href="/refund-policy/">Refund Policy</a>
                                 </li>
                                 <li>
                                     <a href="/faq/">FAQs</a>
@@ -347,7 +330,7 @@
                                     <i class="far fa-envelope"></i>
                                     <div>
                                         <strong>Email Address</strong>
-                                        mail@nyccst.com
+                                        <a href="mailto:mail@pdhsafety.com">mail@pdhsafety.com</a>
                                     </div>
                                 </li>
                                 <li>
@@ -361,6 +344,15 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col text-center">
+                        <img src="{% static 'images/iacet.jpg' %}" width="300" alt="money back">
+                    <p class="text-white mt-2">NYC Construction Safety Training LLC is accredited by the International Association for Continuing Education and Training (IACET).</p>
+                    </div>
+                    </div>
+                </div>
+
             </div>
 
             <div class="footer-btm">
@@ -368,7 +360,7 @@
                     <div class="row justify-content-center align-items-center">
                         <div class="col-lg-6">
                             <div class="footer-logo">
-                                <img src="{% static 'edutim/images/logo-white.png' %}" alt="Edutim" class="img-fluid">
+                                <img src="{% static 'edutim/images/logo5.png' %}" width="70" alt="NYC Construction Safety Training, LLC" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-lg-6">
