fixed legal detail route

--- a/app_students/templates/registration/signup_form.html
+++ b/app_students/templates/registration/signup_form.html
@@ -79,7 +79,7 @@
                                     <label class="woocommerce-form__label woocommerce-form__label-for-checkbox woocommerce-form-login__rememberme">
                                         <input class="woocommerce-form__input woocommerce-form__input-checkbox" name="rememberme" type="checkbox" id="termsCheck" value="" required/>
                                         <span>
-                                            <a class="text-muted small" href="{% url 'legal_detail' %}">
+                                            <a class="text-muted small" href="{% url 'privacy_policy' %}">
                                                 By creating an account you are agreeing to adhere to the NYCCST Terms of
                                                                                                                                                                                                                                                     Service
                                             </a>
