--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -3,7 +3,7 @@
 {% load course_tags %}
 {% load course %}
 
-{% block title %}Best Online - 
+{% block title %}Best Price Online - 
     {{ object.title }}
     Course | pdhsafety.com
 {% endblock %}
