--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -44,8 +44,8 @@ Easy To Take CSP Exam Prep Course Money Back Guarantee
                 <div class="row">
                     <div class="col">
                         <div class="sp-badge-panel">
-                            <a href="#bundles" aria-label="Buy All CSP Exam Preparation Courses at One Low Price $199" class="sp-badge ">
-                                <span>Buy All CSP Exam Preparation Courses at One Low Price $199</span>
+                            <a href="#bundles" aria-label="Buy All Exam Preparation Courses at One Low Price $199" class="sp-badge ">
+                                <span>Buy All Exam Preparation Courses at One Low Price $199</span>
                             </a>
                         </div>
                     
