--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -257,21 +257,21 @@
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
-                                {% comment %} <li class="list-inline-item" aria-label="Twitter">
-                                    <a href="#">
+                                <li class="list-inline-item" >
+                                    <a href="https://twitter.com/FedericoRoca007" target="_blank" aria-label="Twitter">
                                         <i class="fab fa-twitter"></i>
                                     </a>
-                                </li> {% endcomment %}
+                                </li> 
                                 <li class="list-inline-item">
                                     <a target="_blank" aria-label="Linkedin" href="https://www.linkedin.com/in/federico-roca-asp-64aa3a54/">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
                                 </li>
-                                {% comment %} <li class="list-inline-item" aria-label="Pinterest">
-                                    <a href="#">
+                               <li class="list-inline-item" aria-label="Pinterest">
+                                    <a href="https://www.instagram.com/federico.roca2020/" target="_blank" aria-label="Twitter">
                                         <i class="fab fa-pinterest"></i>
                                     </a>
-                                </li> {% endcomment %}
+                                </li> 
                             </ul> 
                         </div>
                     </div>
