--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -295,6 +295,7 @@
                             </ul>
                         </div>
                     </div>
+
                     <div class="col-lg-2 col-sm-6 col-md-6">
                         <div class="footer-widget mb-5 mb-lg-0">
                             <h5 class="widget-title">Company</h5>
@@ -348,9 +349,19 @@
 
                 <div class="row">
                     <div class="col text-center">
-                        <img src="{% static 'images/iacet.jpg' %}" width="300" alt="money back">
-                    <p class="text-white mt-2">NYC Construction Safety Training LLC is accredited by the International Association for Continuing Education and Training (IACET).</p>
+                        <a href="https://www.iacet.org/" target="_blank">
+                            <img src="{% static 'images/iacet.jpg' %}" width="300" alt="money back">
+                        </a>
+                        <p class="text-white mt-2">
+                            NYC Construction Safety Training LLC is accredited by
+                            the International Association for Continuing Education and Training (IACET)
+                        </p>
                     </div>
+                    <div class="col text-center">
+                        <a href="https://www.epa.gov/" target="_blank">
+                            <img src="{% static 'images/epa-seal.svg' %}" width="225" alt="money back">
+                        </a>
+                       
                     </div>
                 </div>
 
