change text courses list

--- a/courses/templates/courses/course/list.html
+++ b/courses/templates/courses/course/list.html
@@ -11,7 +11,7 @@ Best Accredit Safety Training Courses Online | pdhsafety.com
 {% block meta_desc %}
 {% if subject %} Best Price Online {{ subject.title }}
 IACET Accredited, Access 24/7 On All Devices.
-Easy To Take CSP Exam Prep Course Money Back Guarantee 
+Easy To Take Course Money Back Guarantee 
 
 {% endif %}
 {% endblock %}
