--- a/app_students/templates/registration/signup_form.html
+++ b/app_students/templates/registration/signup_form.html
@@ -216,7 +216,7 @@
                         equalTo: '#id_password1'
                     },
                     cell_number: {
-                        required: true
+                        required: false
                     },
                     terms: {
                         required: true
