--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -169,7 +169,7 @@
                         </li>
 
                         <li class="nav-item">
-                           <a class="nav-link" href="/packages" aria-label="Packages"> Packages </a>
+                           <a class="nav-link" href="/packages/" aria-label="Packages"> Packages </a>
                         </li>
 
                         <li class="nav-item">
@@ -177,7 +177,7 @@
                         </li>
 
                         <li class="nav-item">
-                           <a href="/contact" class="nav-link"> Contact </a>
+                           <a href="/contact/" class="nav-link"> Contact </a>
                         </li>
                      </ul>
 
