added minified css combined

--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -24,7 +24,8 @@
 
       <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
-      <!-- bootstrap.min css -->
+      <link rel="stylesheet" href="{% static 'edutim/combine.css' %}" />
+      {% comment %} <!-- bootstrap.min css -->
       <link rel="stylesheet" href="{% static 'edutim/vendors/bootstrap/bootstrap.css' %}" />
       <!-- Iconfont Css -->
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/vendors/fontawesome/css/all.css' %}" />
@@ -34,7 +35,7 @@
 
       <!-- Main Stylesheet -->
       <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/style.css' %}" />
-      <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/responsive.css' %}" />
+      <link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="{% static 'edutim/css/responsive.css' %}" /> {% endcomment %}
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-190250545-1"></script>
